Final edits to README and additional comments

--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <html>
-
-<head>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+  <head>
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <script src="./eyes.js"></script>
     <title>Eye Exercise</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Eye Exercise</h1>
     <div class="eyes">
-        <div class="eye">
-            <div class="pupil"></div>
-       </div>
-        <div class="eye">
-            <div class = "pupil"></div>
-        </div>
+      <div class="eye">
+        <div class="pupil"></div>
+      </div>
+      <div class="eye">
+        <div class="pupil"></div>
+      </div>
     </div>
-</body>
-
-
+  </body>
 </html>
